src/command_modules/azure-cli-network/azure/cli/command_modules/network/tests/recordings/latest/test_network_extended_nsg.yaml
interactions:
- request:
    body: '{"location": "westus", "tags": {"use": "az-test"}}'
    headers:
      Accept: [application/json]
      Accept-Encoding: ['gzip, deflate']
      CommandName: [group create]
      Connection: [keep-alive]
      Content-Length: ['50']
      Content-Type: [application/json; charset=utf-8]
      User-Agent: [python/3.5.3 (Windows-10-10.0.16299-SP0) requests/2.18.4 msrest/0.4.19
          msrest_azure/0.4.17 resourcemanagementclient/1.2.1 Azure-SDK-For-Python
          AZURECLI/2.0.22]
      accept-language: [en-US]
    method: PUT
    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourcegroups/cli_test_extended_nsg000001?api-version=2017-05-10
  response:
    body: {string: '{"id":"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/cli_test_extended_nsg000001","name":"cli_test_extended_nsg000001","location":"westus","tags":{"use":"az-test"},"properties":{"provisioningState":"Succeeded"}}'}
    headers:
      cache-control: [no-cache]
      content-length: ['328']
      content-type: [application/json; charset=utf-8]
      date: ['Tue, 28 Nov 2017 00:15:40 GMT']
      expires: ['-1']
      pragma: [no-cache]
      strict-transport-security: [max-age=31536000; includeSubDomains]
      x-ms-ratelimit-remaining-subscription-writes: ['1195']
    status: {code: 201, message: Created}
- request:
    body: null
    headers:
      Accept: [application/json]
      Accept-Encoding: ['gzip, deflate']
      CommandName: [network nsg create]
      Connection: [keep-alive]
      Content-Type: [application/json; charset=utf-8]
      User-Agent: [python/3.5.3 (Windows-10-10.0.16299-SP0) requests/2.18.4 msrest/0.4.19
          msrest_azure/0.4.17 resourcemanagementclient/1.2.1 Azure-SDK-For-Python
          AZURECLI/2.0.22]
      accept-language: [en-US]
    method: GET
    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourcegroups/cli_test_extended_nsg000001?api-version=2017-05-10
  response:
    body: {string: '{"id":"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/cli_test_extended_nsg000001","name":"cli_test_extended_nsg000001","location":"westus","tags":{"use":"az-test"},"properties":{"provisioningState":"Succeeded"}}'}
    headers:
      cache-control: [no-cache]
      content-length: ['328']
      content-type: [application/json; charset=utf-8]
      date: ['Tue, 28 Nov 2017 00:15:40 GMT']
      expires: ['-1']
      pragma: [no-cache]
      strict-transport-security: [max-age=31536000; includeSubDomains]
      vary: [Accept-Encoding]
    status: {code: 200, message: OK}
- request:
    body: '{"location": "westus"}'
    headers:
      Accept: [application/json]
      Accept-Encoding: ['gzip, deflate']
      CommandName: [network nsg create]
      Connection: [keep-alive]
      Content-Length: ['22']
      Content-Type: [application/json; charset=utf-8]
      User-Agent: [python/3.5.3 (Windows-10-10.0.16299-SP0) requests/2.18.4 msrest/0.4.19
          msrest_azure/0.4.17 networkmanagementclient/1.6.0 Azure-SDK-For-Python AZURECLI/2.0.22]
      accept-language: [en-US]
    method: PUT
    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/cli_test_extended_nsg000001/providers/Microsoft.Network/networkSecurityGroups/nsg1?api-version=2017-10-01
  response:
    body: {string: "{\r\n  \"name\": \"nsg1\",\r\n  \"id\": \"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/cli_test_extended_nsg000001/providers/Microsoft.Network/networkSecurityGroups/nsg1\"\
        ,\r\n  \"etag\": \"W/\\\"e1a48759-d9c9-4912-bbc5-d36324cf4117\\\"\",\r\n \
        \ \"type\": \"Microsoft.Network/networkSecurityGroups\",\r\n  \"location\"\
        : \"westus\",\r\n  \"properties\": {\r\n    \"provisioningState\": \"Updating\"\
        ,\r\n    \"resourceGuid\": \"87723486-c6f4-4365-afb0-291031abf2bc\",\r\n \
        \   \"securityRules\": [],\r\n    \"defaultSecurityRules\": [\r\n      {\r\
        \n        \"name\": \"AllowVnetInBound\",\r\n        \"id\": \"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/cli_test_extended_nsg000001/providers/Microsoft.Network/networkSecurityGroups/nsg1/defaultSecurityRules/AllowVnetInBound\"\
        ,\r\n        \"etag\": \"W/\\\"e1a48759-d9c9-4912-bbc5-d36324cf4117\\\"\"\
        ,\r\n        \"properties\": {\r\n          \"provisioningState\": \"Updating\"\
        ,\r\n          \"description\": \"Allow inbound traffic from all VMs in VNET\"\
        ,\r\n          \"protocol\": \"*\",\r\n          \"sourcePortRange\": \"*\"\
        ,\r\n          \"destinationPortRange\": \"*\",\r\n          \"sourceAddressPrefix\"\
        : \"VirtualNetwork\",\r\n          \"destinationAddressPrefix\": \"VirtualNetwork\"\
        ,\r\n          \"access\": \"Allow\",\r\n          \"priority\": 65000,\r\n\
        \          \"direction\": \"Inbound\",\r\n          \"sourcePortRanges\":\
        \ [],\r\n          \"destinationPortRanges\": [],\r\n          \"sourceAddressPrefixes\"\
        : [],\r\n          \"destinationAddressPrefixes\": []\r\n        }\r\n   \
        \   },\r\n      {\r\n        \"name\": \"AllowAzureLoadBalancerInBound\",\r\
        \n        \"id\": \"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/cli_test_extended_nsg000001/providers/Microsoft.Network/networkSecurityGroups/nsg1/defaultSecurityRules/AllowAzureLoadBalancerInBound\"\
        ,\r\n        \"etag\": \"W/\\\"e1a48759-d9c9-4912-bbc5-d36324cf4117\\\"\"\
        ,\r\n        \"properties\": {\r\n          \"provisioningState\": \"Updating\"\
        ,\r\n          \"description\": \"Allow inbound traffic from azure load balancer\"\
        ,\r\n          \"protocol\": \"*\",\r\n          \"sourcePortRange\": \"*\"\
        ,\r\n          \"destinationPortRange\": \"*\",\r\n          \"sourceAddressPrefix\"\
        : \"AzureLoadBalancer\",\r\n          \"destinationAddressPrefix\": \"*\"\
        ,\r\n          \"access\": \"Allow\",\r\n          \"priority\": 65001,\r\n\
        \          \"direction\": \"Inbound\",\r\n          \"sourcePortRanges\":\
        \ [],\r\n          \"destinationPortRanges\": [],\r\n          \"sourceAddressPrefixes\"\
        : [],\r\n          \"destinationAddressPrefixes\": []\r\n        }\r\n   \
        \   },\r\n      {\r\n        \"name\": \"DenyAllInBound\",\r\n        \"id\"\
        : \"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/cli_test_extended_nsg000001/providers/Microsoft.Network/networkSecurityGroups/nsg1/defaultSecurityRules/DenyAllInBound\"\
        ,\r\n        \"etag\": \"W/\\\"e1a48759-d9c9-4912-bbc5-d36324cf4117\\\"\"\
        ,\r\n        \"properties\": {\r\n          \"provisioningState\": \"Updating\"\
        ,\r\n          \"description\": \"Deny all inbound traffic\",\r\n        \
        \  \"protocol\": \"*\",\r\n          \"sourcePortRange\": \"*\",\r\n     \
        \     \"destinationPortRange\": \"*\",\r\n          \"sourceAddressPrefix\"\
        : \"*\",\r\n          \"destinationAddressPrefix\": \"*\",\r\n          \"\
        access\": \"Deny\",\r\n          \"priority\": 65500,\r\n          \"direction\"\
        : \"Inbound\",\r\n          \"sourcePortRanges\": [],\r\n          \"destinationPortRanges\"\
        : [],\r\n          \"sourceAddressPrefixes\": [],\r\n          \"destinationAddressPrefixes\"\
        : []\r\n        }\r\n      },\r\n      {\r\n        \"name\": \"AllowVnetOutBound\"\
        ,\r\n        \"id\": \"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/cli_test_extended_nsg000001/providers/Microsoft.Network/networkSecurityGroups/nsg1/defaultSecurityRules/AllowVnetOutBound\"\
        ,\r\n        \"etag\": \"W/\\\"e1a48759-d9c9-4912-bbc5-d36324cf4117\\\"\"\
        ,\r\n        \"properties\": {\r\n          \"provisioningState\": \"Updating\"\
        ,\r\n          \"description\": \"Allow outbound traffic from all VMs to all\
        \ VMs in VNET\",\r\n          \"protocol\": \"*\",\r\n          \"sourcePortRange\"\
        : \"*\",\r\n          \"destinationPortRange\": \"*\",\r\n          \"sourceAddressPrefix\"\
        : \"VirtualNetwork\",\r\n          \"destinationAddressPrefix\": \"VirtualNetwork\"\
        ,\r\n          \"access\": \"Allow\",\r\n          \"priority\": 65000,\r\n\
        \          \"direction\": \"Outbound\",\r\n          \"sourcePortRanges\"\
        : [],\r\n          \"destinationPortRanges\": [],\r\n          \"sourceAddressPrefixes\"\
        : [],\r\n          \"destinationAddressPrefixes\": []\r\n        }\r\n   \
        \   },\r\n      {\r\n        \"name\": \"AllowInternetOutBound\",\r\n    \
        \    \"id\": \"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/cli_test_extended_nsg000001/providers/Microsoft.Network/networkSecurityGroups/nsg1/defaultSecurityRules/AllowInternetOutBound\"\
        ,\r\n        \"etag\": \"W/\\\"e1a48759-d9c9-4912-bbc5-d36324cf4117\\\"\"\
        ,\r\n        \"properties\": {\r\n          \"provisioningState\": \"Updating\"\
        ,\r\n          \"description\": \"Allow outbound traffic from all VMs to Internet\"\
        ,\r\n          \"protocol\": \"*\",\r\n          \"sourcePortRange\": \"*\"\
        ,\r\n          \"destinationPortRange\": \"*\",\r\n          \"sourceAddressPrefix\"\
        : \"*\",\r\n          \"destinationAddressPrefix\": \"Internet\",\r\n    \
        \      \"access\": \"Allow\",\r\n          \"priority\": 65001,\r\n      \
        \    \"direction\": \"Outbound\",\r\n          \"sourcePortRanges\": [],\r\
        \n          \"destinationPortRanges\": [],\r\n          \"sourceAddressPrefixes\"\
        : [],\r\n          \"destinationAddressPrefixes\": []\r\n        }\r\n   \
        \   },\r\n      {\r\n        \"name\": \"DenyAllOutBound\",\r\n        \"\
        id\": \"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/cli_test_extended_nsg000001/providers/Microsoft.Network/networkSecurityGroups/nsg1/defaultSecurityRules/DenyAllOutBound\"\
        ,\r\n        \"etag\": \"W/\\\"e1a48759-d9c9-4912-bbc5-d36324cf4117\\\"\"\
        ,\r\n        \"properties\": {\r\n          \"provisioningState\": \"Updating\"\
        ,\r\n          \"description\": \"Deny all outbound traffic\",\r\n       \
        \   \"protocol\": \"*\",\r\n          \"sourcePortRange\": \"*\",\r\n    \
        \      \"destinationPortRange\": \"*\",\r\n          \"sourceAddressPrefix\"\
        : \"*\",\r\n          \"destinationAddressPrefix\": \"*\",\r\n          \"\
        access\": \"Deny\",\r\n          \"priority\": 65500,\r\n          \"direction\"\
        : \"Outbound\",\r\n          \"sourcePortRanges\": [],\r\n          \"destinationPortRanges\"\
        : [],\r\n          \"sourceAddressPrefixes\": [],\r\n          \"destinationAddressPrefixes\"\
        : []\r\n        }\r\n      }\r\n    ]\r\n  }\r\n}"}
    headers:
      azure-asyncoperation: ['https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Network/locations/westus/operations/930887f6-b993-4fd4-980f-c4f52e2392a4?api-version=2017-10-01']
      cache-control: [no-cache]
      content-length: ['6439']
      content-type: [application/json; charset=utf-8]
      date: ['Tue, 28 Nov 2017 00:15:43 GMT']
      expires: ['-1']
      pragma: [no-cache]
      server: [Microsoft-HTTPAPI/2.0, Microsoft-HTTPAPI/2.0]
      strict-transport-security: [max-age=31536000; includeSubDomains]
      x-ms-ratelimit-remaining-subscription-writes: ['1195']
    status: {code: 201, message: Created}
- request:
    body: null
    headers:
      Accept: [application/json]
      Accept-Encoding: ['gzip, deflate']
      CommandName: [network nsg create]
      Connection: [keep-alive]
      Content-Type: [application/json; charset=utf-8]
      User-Agent: [python/3.5.3 (Windows-10-10.0.16299-SP0) requests/2.18.4 msrest/0.4.19
          msrest_azure/0.4.17 networkmanagementclient/1.6.0 Azure-SDK-For-Python AZURECLI/2.0.22]
      accept-language: [en-US]
    method: GET
    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Network/locations/westus/operations/930887f6-b993-4fd4-980f-c4f52e2392a4?api-version=2017-10-01
  response:
    body: {string: "{\r\n  \"status\": \"Succeeded\"\r\n}"}
    headers:
      cache-control: [no-cache]
      content-length: ['29']
      content-type: [application/json; charset=utf-8]
      date: ['Tue, 28 Nov 2017 00:15:53 GMT']
      expires: ['-1']
      pragma: [no-cache]
      server: [Microsoft-HTTPAPI/2.0, Microsoft-HTTPAPI/2.0]
      strict-transport-security: [max-age=31536000; includeSubDomains]
      transfer-encoding: [chunked]
      vary: [Accept-Encoding]
    status: {code: 200, message: OK}
- request:
    body: null
    headers:
      Accept: [application/json]
      Accept-Encoding: ['gzip, deflate']
      CommandName: [network nsg create]
      Connection: [keep-alive]
      Content-Type: [application/json; charset=utf-8]
      User-Agent: [python/3.5.3 (Windows-10-10.0.16299-SP0) requests/2.18.4 msrest/0.4.19
          msrest_azure/0.4.17 networkmanagementclient/1.6.0 Azure-SDK-For-Python AZURECLI/2.0.22]
      accept-language: [en-US]
    method: GET
    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/cli_test_extended_nsg000001/providers/Microsoft.Network/networkSecurityGroups/nsg1?api-version=2017-10-01
  response:
    body: {string: "{\r\n  \"name\": \"nsg1\",\r\n  \"id\": \"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/cli_test_extended_nsg000001/providers/Microsoft.Network/networkSecurityGroups/nsg1\"\
        ,\r\n  \"etag\": \"W/\\\"6e1b37dd-4fbc-4d1d-a897-f50475f27b15\\\"\",\r\n \
        \ \"type\": \"Microsoft.Network/networkSecurityGroups\",\r\n  \"location\"\
        : \"westus\",\r\n  \"properties\": {\r\n    \"provisioningState\": \"Succeeded\"\
        ,\r\n    \"resourceGuid\": \"87723486-c6f4-4365-afb0-291031abf2bc\",\r\n \
        \   \"securityRules\": [],\r\n    \"defaultSecurityRules\": [\r\n      {\r\
        \n        \"name\": \"AllowVnetInBound\",\r\n        \"id\": \"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/cli_test_extended_nsg000001/providers/Microsoft.Network/networkSecurityGroups/nsg1/defaultSecurityRules/AllowVnetInBound\"\
        ,\r\n        \"etag\": \"W/\\\"6e1b37dd-4fbc-4d1d-a897-f50475f27b15\\\"\"\
        ,\r\n        \"properties\": {\r\n          \"provisioningState\": \"Succeeded\"\
        ,\r\n          \"description\": \"Allow inbound traffic from all VMs in VNET\"\
        ,\r\n          \"protocol\": \"*\",\r\n          \"sourcePortRange\": \"*\"\
        ,\r\n          \"destinationPortRange\": \"*\",\r\n          \"sourceAddressPrefix\"\
        : \"VirtualNetwork\",\r\n          \"destinationAddressPrefix\": \"VirtualNetwork\"\
        ,\r\n          \"access\": \"Allow\",\r\n          \"priority\": 65000,\r\n\
        \          \"direction\": \"Inbound\",\r\n          \"sourcePortRanges\":\
        \ [],\r\n          \"destinationPortRanges\": [],\r\n          \"sourceAddressPrefixes\"\
        : [],\r\n          \"destinationAddressPrefixes\": []\r\n        }\r\n   \
        \   },\r\n      {\r\n        \"name\": \"AllowAzureLoadBalancerInBound\",\r\
        \n        \"id\": \"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/cli_test_extended_nsg000001/providers/Microsoft.Network/networkSecurityGroups/nsg1/defaultSecurityRules/AllowAzureLoadBalancerInBound\"\
        ,\r\n        \"etag\": \"W/\\\"6e1b37dd-4fbc-4d1d-a897-f50475f27b15\\\"\"\
        ,\r\n        \"properties\": {\r\n          \"provisioningState\": \"Succeeded\"\
        ,\r\n          \"description\": \"Allow inbound traffic from azure load balancer\"\
        ,\r\n          \"protocol\": \"*\",\r\n          \"sourcePortRange\": \"*\"\
        ,\r\n          \"destinationPortRange\": \"*\",\r\n          \"sourceAddressPrefix\"\
        : \"AzureLoadBalancer\",\r\n          \"destinationAddressPrefix\": \"*\"\
        ,\r\n          \"access\": \"Allow\",\r\n          \"priority\": 65001,\r\n\
        \          \"direction\": \"Inbound\",\r\n          \"sourcePortRanges\":\
        \ [],\r\n          \"destinationPortRanges\": [],\r\n          \"sourceAddressPrefixes\"\
        : [],\r\n          \"destinationAddressPrefixes\": []\r\n        }\r\n   \
        \   },\r\n      {\r\n        \"name\": \"DenyAllInBound\",\r\n        \"id\"\
        : \"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/cli_test_extended_nsg000001/providers/Microsoft.Network/networkSecurityGroups/nsg1/defaultSecurityRules/DenyAllInBound\"\
        ,\r\n        \"etag\": \"W/\\\"6e1b37dd-4fbc-4d1d-a897-f50475f27b15\\\"\"\
        ,\r\n        \"properties\": {\r\n          \"provisioningState\": \"Succeeded\"\
        ,\r\n          \"description\": \"Deny all inbound traffic\",\r\n        \
        \  \"protocol\": \"*\",\r\n          \"sourcePortRange\": \"*\",\r\n     \
        \     \"destinationPortRange\": \"*\",\r\n          \"sourceAddressPrefix\"\
        : \"*\",\r\n          \"destinationAddressPrefix\": \"*\",\r\n          \"\
        access\": \"Deny\",\r\n          \"priority\": 65500,\r\n          \"direction\"\
        : \"Inbound\",\r\n          \"sourcePortRanges\": [],\r\n          \"destinationPortRanges\"\
        : [],\r\n          \"sourceAddressPrefixes\": [],\r\n          \"destinationAddressPrefixes\"\
        : []\r\n        }\r\n      },\r\n      {\r\n        \"name\": \"AllowVnetOutBound\"\
        ,\r\n        \"id\": \"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/cli_test_extended_nsg000001/providers/Microsoft.Network/networkSecurityGroups/nsg1/defaultSecurityRules/AllowVnetOutBound\"\
        ,\r\n        \"etag\": \"W/\\\"6e1b37dd-4fbc-4d1d-a897-f50475f27b15\\\"\"\
        ,\r\n        \"properties\": {\r\n          \"provisioningState\": \"Succeeded\"\
        ,\r\n          \"description\": \"Allow outbound traffic from all VMs to all\
        \ VMs in VNET\",\r\n          \"protocol\": \"*\",\r\n          \"sourcePortRange\"\
        : \"*\",\r\n          \"destinationPortRange\": \"*\",\r\n          \"sourceAddressPrefix\"\
        : \"VirtualNetwork\",\r\n          \"destinationAddressPrefix\": \"VirtualNetwork\"\
        ,\r\n          \"access\": \"Allow\",\r\n          \"priority\": 65000,\r\n\
        \          \"direction\": \"Outbound\",\r\n          \"sourcePortRanges\"\
        : [],\r\n          \"destinationPortRanges\": [],\r\n          \"sourceAddressPrefixes\"\
        : [],\r\n          \"destinationAddressPrefixes\": []\r\n        }\r\n   \
        \   },\r\n      {\r\n        \"name\": \"AllowInternetOutBound\",\r\n    \
        \    \"id\": \"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/cli_test_extended_nsg000001/providers/Microsoft.Network/networkSecurityGroups/nsg1/defaultSecurityRules/AllowInternetOutBound\"\
        ,\r\n        \"etag\": \"W/\\\"6e1b37dd-4fbc-4d1d-a897-f50475f27b15\\\"\"\
        ,\r\n        \"properties\": {\r\n          \"provisioningState\": \"Succeeded\"\
        ,\r\n          \"description\": \"Allow outbound traffic from all VMs to Internet\"\
        ,\r\n          \"protocol\": \"*\",\r\n          \"sourcePortRange\": \"*\"\
        ,\r\n          \"destinationPortRange\": \"*\",\r\n          \"sourceAddressPrefix\"\
        : \"*\",\r\n          \"destinationAddressPrefix\": \"Internet\",\r\n    \
        \      \"access\": \"Allow\",\r\n          \"priority\": 65001,\r\n      \
        \    \"direction\": \"Outbound\",\r\n          \"sourcePortRanges\": [],\r\
        \n          \"destinationPortRanges\": [],\r\n          \"sourceAddressPrefixes\"\
        : [],\r\n          \"destinationAddressPrefixes\": []\r\n        }\r\n   \
        \   },\r\n      {\r\n        \"name\": \"DenyAllOutBound\",\r\n        \"\
        id\": \"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/cli_test_extended_nsg000001/providers/Microsoft.Network/networkSecurityGroups/nsg1/defaultSecurityRules/DenyAllOutBound\"\
        ,\r\n        \"etag\": \"W/\\\"6e1b37dd-4fbc-4d1d-a897-f50475f27b15\\\"\"\
        ,\r\n        \"properties\": {\r\n          \"provisioningState\": \"Succeeded\"\
        ,\r\n          \"description\": \"Deny all outbound traffic\",\r\n       \
        \   \"protocol\": \"*\",\r\n          \"sourcePortRange\": \"*\",\r\n    \
        \      \"destinationPortRange\": \"*\",\r\n          \"sourceAddressPrefix\"\
        : \"*\",\r\n          \"destinationAddressPrefix\": \"*\",\r\n          \"\
        access\": \"Deny\",\r\n          \"priority\": 65500,\r\n          \"direction\"\
        : \"Outbound\",\r\n          \"sourcePortRanges\": [],\r\n          \"destinationPortRanges\"\
        : [],\r\n          \"sourceAddressPrefixes\": [],\r\n          \"destinationAddressPrefixes\"\
        : []\r\n        }\r\n      }\r\n    ]\r\n  }\r\n}"}
    headers:
      cache-control: [no-cache]
      content-length: ['6446']
      content-type: [application/json; charset=utf-8]
      date: ['Tue, 28 Nov 2017 00:15:53 GMT']
      etag: [W/"6e1b37dd-4fbc-4d1d-a897-f50475f27b15"]
      expires: ['-1']
      pragma: [no-cache]
      server: [Microsoft-HTTPAPI/2.0, Microsoft-HTTPAPI/2.0]
      strict-transport-security: [max-age=31536000; includeSubDomains]
      transfer-encoding: [chunked]
      vary: [Accept-Encoding]
    status: {code: 200, message: OK}
- request:
    body: '{"properties": {"sourcePortRanges": ["700-900", "1000-1100"], "sourceAddressPrefix":
      "*", "destinationAddressPrefixes": ["10.0.0.0/24", "11.0.0.0/24"], "destinationPortRange":
      "4444", "protocol": "*", "destinationAddressPrefix": "", "direction": "Inbound",
      "priority": 1000, "access": "Allow"}, "name": "rule1"}'
    headers:
      Accept: [application/json]
      Accept-Encoding: ['gzip, deflate']
      CommandName: [network nsg rule create]
      Connection: [keep-alive]
      Content-Length: ['311']
      Content-Type: [application/json; charset=utf-8]
      User-Agent: [python/3.5.3 (Windows-10-10.0.16299-SP0) requests/2.18.4 msrest/0.4.19
          msrest_azure/0.4.17 networkmanagementclient/1.6.0 Azure-SDK-For-Python AZURECLI/2.0.22]
      accept-language: [en-US]
    method: PUT
    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/cli_test_extended_nsg000001/providers/Microsoft.Network/networkSecurityGroups/nsg1/securityRules/rule1?api-version=2017-10-01
  response:
    body: {string: "{\r\n  \"name\": \"rule1\",\r\n  \"id\": \"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/cli_test_extended_nsg000001/providers/Microsoft.Network/networkSecurityGroups/nsg1/securityRules/rule1\"\
        ,\r\n  \"etag\": \"W/\\\"58260d2c-3a2f-4970-bcfa-a17c6b007820\\\"\",\r\n \
        \ \"properties\": {\r\n    \"provisioningState\": \"Updating\",\r\n    \"\
        protocol\": \"*\",\r\n    \"destinationPortRange\": \"4444\",\r\n    \"sourceAddressPrefix\"\
        : \"*\",\r\n    \"destinationAddressPrefix\": \"\",\r\n    \"access\": \"\
        Allow\",\r\n    \"priority\": 1000,\r\n    \"direction\": \"Inbound\",\r\n\
        \    \"sourcePortRanges\": [\r\n      \"700-900\",\r\n      \"1000-1100\"\r\
        \n    ],\r\n    \"destinationPortRanges\": [],\r\n    \"sourceAddressPrefixes\"\
        : [],\r\n    \"destinationAddressPrefixes\": [\r\n      \"10.0.0.0/24\",\r\
        \n      \"11.0.0.0/24\"\r\n    ]\r\n  }\r\n}"}
    headers:
      azure-asyncoperation: ['https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Network/locations/westus/operations/0f81ecae-7e0c-4b90-a831-eb41acb39453?api-version=2017-10-01']
      cache-control: [no-cache]
      content-length: ['805']
      content-type: [application/json; charset=utf-8]
      date: ['Tue, 28 Nov 2017 00:15:55 GMT']
      expires: ['-1']
      pragma: [no-cache]
      server: [Microsoft-HTTPAPI/2.0, Microsoft-HTTPAPI/2.0]
      strict-transport-security: [max-age=31536000; includeSubDomains]
      x-ms-ratelimit-remaining-subscription-writes: ['1197']
    status: {code: 201, message: Created}
- request:
    body: null
    headers:
      Accept: [application/json]
      Accept-Encoding: ['gzip, deflate']
      CommandName: [network nsg rule create]
      Connection: [keep-alive]
      Content-Type: [application/json; charset=utf-8]
      User-Agent: [python/3.5.3 (Windows-10-10.0.16299-SP0) requests/2.18.4 msrest/0.4.19
          msrest_azure/0.4.17 networkmanagementclient/1.6.0 Azure-SDK-For-Python AZURECLI/2.0.22]
      accept-language: [en-US]
    method: GET
    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Network/locations/westus/operations/0f81ecae-7e0c-4b90-a831-eb41acb39453?api-version=2017-10-01
  response:
    body: {string: "{\r\n  \"status\": \"Succeeded\"\r\n}"}
    headers:
      cache-control: [no-cache]
      content-length: ['29']
      content-type: [application/json; charset=utf-8]
      date: ['Tue, 28 Nov 2017 00:16:06 GMT']
      expires: ['-1']
      pragma: [no-cache]
      server: [Microsoft-HTTPAPI/2.0, Microsoft-HTTPAPI/2.0]
      strict-transport-security: [max-age=31536000; includeSubDomains]
      transfer-encoding: [chunked]
      vary: [Accept-Encoding]
    status: {code: 200, message: OK}
- request:
    body: null
    headers:
      Accept: [application/json]
      Accept-Encoding: ['gzip, deflate']
      CommandName: [network nsg rule create]
      Connection: [keep-alive]
      Content-Type: [application/json; charset=utf-8]
      User-Agent: [python/3.5.3 (Windows-10-10.0.16299-SP0) requests/2.18.4 msrest/0.4.19
          msrest_azure/0.4.17 networkmanagementclient/1.6.0 Azure-SDK-For-Python AZURECLI/2.0.22]
      accept-language: [en-US]
    method: GET
    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/cli_test_extended_nsg000001/providers/Microsoft.Network/networkSecurityGroups/nsg1/securityRules/rule1?api-version=2017-10-01
  response:
    body: {string: "{\r\n  \"name\": \"rule1\",\r\n  \"id\": \"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/cli_test_extended_nsg000001/providers/Microsoft.Network/networkSecurityGroups/nsg1/securityRules/rule1\"\
        ,\r\n  \"etag\": \"W/\\\"3d284493-2cd3-4354-97cc-fa14258c6e31\\\"\",\r\n \
        \ \"properties\": {\r\n    \"provisioningState\": \"Succeeded\",\r\n    \"\
        protocol\": \"*\",\r\n    \"destinationPortRange\": \"4444\",\r\n    \"sourceAddressPrefix\"\
        : \"*\",\r\n    \"destinationAddressPrefix\": \"\",\r\n    \"access\": \"\
        Allow\",\r\n    \"priority\": 1000,\r\n    \"direction\": \"Inbound\",\r\n\
        \    \"sourcePortRanges\": [\r\n      \"700-900\",\r\n      \"1000-1100\"\r\
        \n    ],\r\n    \"destinationPortRanges\": [],\r\n    \"sourceAddressPrefixes\"\
        : [],\r\n    \"destinationAddressPrefixes\": [\r\n      \"10.0.0.0/24\",\r\
        \n      \"11.0.0.0/24\"\r\n    ]\r\n  }\r\n}"}
    headers:
      cache-control: [no-cache]
      content-length: ['806']
      content-type: [application/json; charset=utf-8]
      date: ['Tue, 28 Nov 2017 00:16:06 GMT']
      etag: [W/"3d284493-2cd3-4354-97cc-fa14258c6e31"]
      expires: ['-1']
      pragma: [no-cache]
      server: [Microsoft-HTTPAPI/2.0, Microsoft-HTTPAPI/2.0]
      strict-transport-security: [max-age=31536000; includeSubDomains]
      transfer-encoding: [chunked]
      vary: [Accept-Encoding]
    status: {code: 200, message: OK}
- request:
    body: null
    headers:
      Accept: [application/json]
      Accept-Encoding: ['gzip, deflate']
      CommandName: [network nsg rule update]
      Connection: [keep-alive]
      Content-Type: [application/json; charset=utf-8]
      User-Agent: [python/3.5.3 (Windows-10-10.0.16299-SP0) requests/2.18.4 msrest/0.4.19
          msrest_azure/0.4.17 networkmanagementclient/1.6.0 Azure-SDK-For-Python AZURECLI/2.0.22]
      accept-language: [en-US]
    method: GET
    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/cli_test_extended_nsg000001/providers/Microsoft.Network/networkSecurityGroups/nsg1/securityRules/rule1?api-version=2017-10-01
  response:
    body: {string: "{\r\n  \"name\": \"rule1\",\r\n  \"id\": \"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/cli_test_extended_nsg000001/providers/Microsoft.Network/networkSecurityGroups/nsg1/securityRules/rule1\"\
        ,\r\n  \"etag\": \"W/\\\"3d284493-2cd3-4354-97cc-fa14258c6e31\\\"\",\r\n \
        \ \"properties\": {\r\n    \"provisioningState\": \"Succeeded\",\r\n    \"\
        protocol\": \"*\",\r\n    \"destinationPortRange\": \"4444\",\r\n    \"sourceAddressPrefix\"\
        : \"*\",\r\n    \"destinationAddressPrefix\": \"\",\r\n    \"access\": \"\
        Allow\",\r\n    \"priority\": 1000,\r\n    \"direction\": \"Inbound\",\r\n\
        \    \"sourcePortRanges\": [\r\n      \"700-900\",\r\n      \"1000-1100\"\r\
        \n    ],\r\n    \"destinationPortRanges\": [],\r\n    \"sourceAddressPrefixes\"\
        : [],\r\n    \"destinationAddressPrefixes\": [\r\n      \"10.0.0.0/24\",\r\
        \n      \"11.0.0.0/24\"\r\n    ]\r\n  }\r\n}"}
    headers:
      cache-control: [no-cache]
      content-length: ['806']
      content-type: [application/json; charset=utf-8]
      date: ['Tue, 28 Nov 2017 00:16:07 GMT']
      etag: [W/"3d284493-2cd3-4354-97cc-fa14258c6e31"]
      expires: ['-1']
      pragma: [no-cache]
      server: [Microsoft-HTTPAPI/2.0, Microsoft-HTTPAPI/2.0]
      strict-transport-security: [max-age=31536000; includeSubDomains]
      transfer-encoding: [chunked]
      vary: [Accept-Encoding]
    status: {code: 200, message: OK}
- request:
    body: 'b''{"properties": {"destinationPortRanges": ["500-1000", "2000", "3000"],
      "provisioningState": "Succeeded", "sourceAddressPrefix": "", "protocol": "*",
      "sourcePortRange": "*", "destinationAddressPrefix": "Internet", "direction":
      "Inbound", "sourceAddressPrefixes": ["10.0.0.0/24", "11.0.0.0/24"], "access":
      "Allow", "priority": 1000}, "name": "rule1", "id": "/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/cli_test_extended_nsg000001/providers/Microsoft.Network/networkSecurityGroups/nsg1/securityRules/rule1",
      "etag": "W/\\"3d284493-2cd3-4354-97cc-fa14258c6e31\\""}'''
    headers:
      Accept: [application/json]
      Accept-Encoding: ['gzip, deflate']
      CommandName: [network nsg rule update]
      Connection: [keep-alive]
      Content-Length: ['629']
      Content-Type: [application/json; charset=utf-8]
      User-Agent: [python/3.5.3 (Windows-10-10.0.16299-SP0) requests/2.18.4 msrest/0.4.19
          msrest_azure/0.4.17 networkmanagementclient/1.6.0 Azure-SDK-For-Python AZURECLI/2.0.22]
      accept-language: [en-US]
    method: PUT
    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/cli_test_extended_nsg000001/providers/Microsoft.Network/networkSecurityGroups/nsg1/securityRules/rule1?api-version=2017-10-01
  response:
    body: {string: "{\r\n  \"name\": \"rule1\",\r\n  \"id\": \"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/cli_test_extended_nsg000001/providers/Microsoft.Network/networkSecurityGroups/nsg1/securityRules/rule1\"\
        ,\r\n  \"etag\": \"W/\\\"77a125c1-86ee-432e-9748-96a91cd7bf83\\\"\",\r\n \
        \ \"properties\": {\r\n    \"provisioningState\": \"Updating\",\r\n    \"\
        protocol\": \"*\",\r\n    \"sourcePortRange\": \"*\",\r\n    \"sourceAddressPrefix\"\
        : \"\",\r\n    \"destinationAddressPrefix\": \"Internet\",\r\n    \"access\"\
        : \"Allow\",\r\n    \"priority\": 1000,\r\n    \"direction\": \"Inbound\"\
        ,\r\n    \"sourcePortRanges\": [],\r\n    \"destinationPortRanges\": [\r\n\
        \      \"500-1000\",\r\n      \"2000\",\r\n      \"3000\"\r\n    ],\r\n  \
        \  \"sourceAddressPrefixes\": [\r\n      \"10.0.0.0/24\",\r\n      \"11.0.0.0/24\"\
        \r\n    ],\r\n    \"destinationAddressPrefixes\": []\r\n  }\r\n}"}
    headers:
      azure-asyncoperation: ['https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Network/locations/westus/operations/84878f25-5d06-44a2-829d-b29bb806d771?api-version=2017-10-01']
      cache-control: [no-cache]
      content-length: ['815']
      content-type: [application/json; charset=utf-8]
      date: ['Tue, 28 Nov 2017 00:16:08 GMT']
      expires: ['-1']
      pragma: [no-cache]
      server: [Microsoft-HTTPAPI/2.0, Microsoft-HTTPAPI/2.0]
      strict-transport-security: [max-age=31536000; includeSubDomains]
      transfer-encoding: [chunked]
      vary: [Accept-Encoding]
      x-ms-ratelimit-remaining-subscription-writes: ['1191']
    status: {code: 200, message: OK}
- request:
    body: null
    headers:
      Accept: [application/json]
      Accept-Encoding: ['gzip, deflate']
      CommandName: [network nsg rule update]
      Connection: [keep-alive]
      Content-Type: [application/json; charset=utf-8]
      User-Agent: [python/3.5.3 (Windows-10-10.0.16299-SP0) requests/2.18.4 msrest/0.4.19
          msrest_azure/0.4.17 networkmanagementclient/1.6.0 Azure-SDK-For-Python AZURECLI/2.0.22]
      accept-language: [en-US]
    method: GET
    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Network/locations/westus/operations/84878f25-5d06-44a2-829d-b29bb806d771?api-version=2017-10-01
  response:
    body: {string: "{\r\n  \"status\": \"Succeeded\"\r\n}"}
    headers:
      cache-control: [no-cache]
      content-length: ['29']
      content-type: [application/json; charset=utf-8]
      date: ['Tue, 28 Nov 2017 00:16:18 GMT']
      expires: ['-1']
      pragma: [no-cache]
      server: [Microsoft-HTTPAPI/2.0, Microsoft-HTTPAPI/2.0]
      strict-transport-security: [max-age=31536000; includeSubDomains]
      transfer-encoding: [chunked]
      vary: [Accept-Encoding]
    status: {code: 200, message: OK}
- request:
    body: null
    headers:
      Accept: [application/json]
      Accept-Encoding: ['gzip, deflate']
      CommandName: [network nsg rule update]
      Connection: [keep-alive]
      Content-Type: [application/json; charset=utf-8]
      User-Agent: [python/3.5.3 (Windows-10-10.0.16299-SP0) requests/2.18.4 msrest/0.4.19
          msrest_azure/0.4.17 networkmanagementclient/1.6.0 Azure-SDK-For-Python AZURECLI/2.0.22]
      accept-language: [en-US]
    method: GET
    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/cli_test_extended_nsg000001/providers/Microsoft.Network/networkSecurityGroups/nsg1/securityRules/rule1?api-version=2017-10-01
  response:
    body: {string: "{\r\n  \"name\": \"rule1\",\r\n  \"id\": \"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/cli_test_extended_nsg000001/providers/Microsoft.Network/networkSecurityGroups/nsg1/securityRules/rule1\"\
        ,\r\n  \"etag\": \"W/\\\"04e2c497-6707-4c9b-9e5f-845c52b1bb9c\\\"\",\r\n \
        \ \"properties\": {\r\n    \"provisioningState\": \"Succeeded\",\r\n    \"\
        protocol\": \"*\",\r\n    \"sourcePortRange\": \"*\",\r\n    \"sourceAddressPrefix\"\
        : \"\",\r\n    \"destinationAddressPrefix\": \"Internet\",\r\n    \"access\"\
        : \"Allow\",\r\n    \"priority\": 1000,\r\n    \"direction\": \"Inbound\"\
        ,\r\n    \"sourcePortRanges\": [],\r\n    \"destinationPortRanges\": [\r\n\
        \      \"500-1000\",\r\n      \"2000\",\r\n      \"3000\"\r\n    ],\r\n  \
        \  \"sourceAddressPrefixes\": [\r\n      \"10.0.0.0/24\",\r\n      \"11.0.0.0/24\"\
        \r\n    ],\r\n    \"destinationAddressPrefixes\": []\r\n  }\r\n}"}
    headers:
      cache-control: [no-cache]
      content-length: ['816']
      content-type: [application/json; charset=utf-8]
      date: ['Tue, 28 Nov 2017 00:16:19 GMT']
      etag: [W/"04e2c497-6707-4c9b-9e5f-845c52b1bb9c"]
      expires: ['-1']
      pragma: [no-cache]
      server: [Microsoft-HTTPAPI/2.0, Microsoft-HTTPAPI/2.0]
      strict-transport-security: [max-age=31536000; includeSubDomains]
      transfer-encoding: [chunked]
      vary: [Accept-Encoding]
    status: {code: 200, message: OK}
- request:
    body: null
    headers:
      Accept: [application/json]
      Accept-Encoding: ['gzip, deflate']
      CommandName: [group delete]
      Connection: [keep-alive]
      Content-Length: ['0']
      Content-Type: [application/json; charset=utf-8]
      User-Agent: [python/3.5.3 (Windows-10-10.0.16299-SP0) requests/2.18.4 msrest/0.4.19
          msrest_azure/0.4.17 resourcemanagementclient/1.2.1 Azure-SDK-For-Python
          AZURECLI/2.0.22]
      accept-language: [en-US]
    method: DELETE
    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourcegroups/cli_test_extended_nsg000001?api-version=2017-05-10
  response:
    body: {string: ''}
    headers:
      cache-control: [no-cache]
      content-length: ['0']
      date: ['Tue, 28 Nov 2017 00:16:20 GMT']
      expires: ['-1']
      location: ['https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/operationresults/eyJqb2JJZCI6IlJFU09VUkNFR1JPVVBERUxFVElPTkpPQi1DTEk6NUZURVNUOjVGRVhURU5ERUQ6NUZOU0dLWklPN0hYS1JNWFpURE9IV1hKQnxERkNDRDFGODMxNTNGNUU3LVdFU1RVUyIsImpvYkxvY2F0aW9uIjoid2VzdHVzIn0?api-version=2017-05-10']
      pragma: [no-cache]
      strict-transport-security: [max-age=31536000; includeSubDomains]
      x-ms-ratelimit-remaining-subscription-writes: ['1196']
    status: {code: 202, message: Accepted}
version: 1
